--- a/codes/package.json
+++ b/codes/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.6.1",
     "next": "14.2.3",
+    "node": "^20.13.0",
     "react": "^18",
     "react-dom": "^18"
   },
