--- a/codes/package.json
+++ b/codes/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.17.2",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.6.1",
     "next": "^14.2.3",
