--- a/codes/package.json
+++ b/codes/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.17.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "mongodb": "^6.6.1",
     "next": "^14.2.3",
     "node": "^20.13.1",
