completata login e registrazione
Co-authored-by: JasnoorDharni <JasnoorDharni@users.noreply.github.com>

--- a/codes/.env
+++ b/codes/.env
@@ -1,1 +1,2 @@
 MONGO_URL = mongodb+srv://fitgym:37uOUe82UXcuUzqw@fitgym44.lnlgrf8.mongodb.net/?retryWrites=true&w=majority&appName=fitgym44
+jwt_secret = fitgym
