--- a/codes/package.json
+++ b/codes/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "an": "^0.0.8",
     "antd": "^5.17.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
     "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "node": "^20.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.12.11",
     "@types/react": "18.3.2",
     "@types/react-dom": "^18",
