--- a/codes/package.json
+++ b/codes/package.json
@@ -20,7 +20,8 @@
     "next-auth": "^4.24.7",
     "node": "^20.13.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
