--- a/codes/package.json
+++ b/codes/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.17.2",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
@@ -20,7 +21,9 @@
     "next-auth": "^4.24.7",
     "node": "^20.13.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.12.11",
     "@types/react": "18.3.2",
+    "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
