--- a/codes/package.json
+++ b/codes/package.json
@@ -33,6 +33,7 @@
     "@types/react": "18.3.2",
     "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18",
+    "@types/react-icons": "^3.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
