--- a/codes/package.json
+++ b/codes/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "an": "^0.0.8",
     "antd": "^5.17.2",
     "axios": "^1.7.2",
@@ -24,7 +25,8 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
