--- a/codes/package.json
+++ b/codes/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.1",
+    "mongoose": "^8.4.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "node": "^20.13.1",
