--- a/codes/package.json
+++ b/codes/package.json
@@ -27,16 +27,21 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.12.11",
     "@types/react": "18.3.2",
     "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18",
     "@types/react-icons": "^3.0.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
