--- a/codes/package.json
+++ b/codes/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.4.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
+    "next-swagger-doc": "^0.4.0",
     "node": "^20.14.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -29,7 +30,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "swagger-ui-react": "^5.17.14"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -42,6 +44,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/swagger-ui-react": "^4.18.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
