--- a/codes/package.json
+++ b/codes/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --coverage"
+    "lint": "next lint"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
@@ -22,7 +21,6 @@
     "mongoose": "^8.4.0",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
-    "next-swagger-doc": "^0.4.0",
     "node": "^20.14.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -34,11 +32,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.12.11",
     "@types/react": "18.3.2",
@@ -49,10 +44,8 @@
     "@types/swagger-ui-express": "^4.1.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "jest": "^29.7.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.1.5",
     "typescript": "5.4.5"
   }
 }
